[project]
name = "test-repo"
version = "0.1.0"
description = "Test repository, used to try stuff out."
authors = [{ name = "Andrew Kinsman", email = "69199502+LunaPurpleSunshine@users.noreply.github.com" }]
requires-python = "~=3.11"
readme = "README.md"
license = "ISC"
dependencies = ["requests>=2.32.0,<3"]

[dependency-groups]
dev = [
    "pytest>=7.4.2",
    "hypothesis>=6.87.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src"]
[tool.hatch.build.targets.wheel]
only-include = ["src"]

######### Lint/Formatter Settings #########
[tool.ruff]
src = ["src/randopy", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "BLE", "A", "RUF", "TID252"]

[tool.mypy]
warn_unused_configs = true
python_version = "3.13"
warn_return_any = true

[tool.isort]
profile = "black"
src_paths = [".", "tests/"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["test/"]
xfail_strict = true
markers = ["no_test_env"]

[tool.coverage.run]
source = ["./src/randopy"]
